fix: loader on small screen images

--- a/app/diary/components/style.module.scss
+++ b/app/diary/components/style.module.scss
@@ -134,6 +134,26 @@
         position: relative;
         width: 100vw;
         height: 100vw;
+
+        img {
+          object-fit: cover;
+        }
+
+        span {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          z-index: 1;
+          width: 100px;
+          height: 100px;
+          border: 3px solid map-get($theme, 'colors', 'secondary', 'main');
+          border-bottom-color: transparent;
+          border-radius: 50%;
+          display: inline-block;
+          box-sizing: border-box;
+          animation: rotation 1.6s linear infinite;
+        }
       }
     }
 
